[gd_scene load_steps=3 format=3 uid="uid://bfwnhju0lpjof"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_tm4h6"]
[ext_resource type="AudioStream" uid="uid://chq56rpyr1g8b" path="res://Music/Mainmenu.mp3" id="2_52aa6"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_tm4h6")

[node name="ShipBuilder" type="Button" parent="."]
offset_left = 709.0
offset_top = 358.0
offset_right = 1063.0
offset_bottom = 463.0
text = "Ship Builder
"

[node name="ExitGame" type="Button" parent="."]
offset_left = 62.0
offset_top = 58.0
offset_right = 164.0
offset_bottom = 144.0
text = "Exit Game"

[node name="MissionSelect" type="Button" parent="."]
offset_left = 708.0
offset_top = 556.0
offset_right = 1062.0
offset_bottom = 661.0
text = "Mission Select
"

[node name="Label" type="Label" parent="."]
offset_left = 682.0
offset_top = 83.0
offset_right = 1091.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 50
text = "GAME_TITLE_TBD"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_52aa6")
autoplay = true

[connection signal="pressed" from="ShipBuilder" to="." method="_on_ship_builder_pressed"]
[connection signal="pressed" from="ExitGame" to="." method="_on_exit_game_pressed"]
[connection signal="pressed" from="MissionSelect" to="." method="_on_mission_select_pressed"]
